test Flask server (main branch is quart)

--- a/tests/templates/sign_up.html
+++ b/tests/templates/sign_up.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Registration</h2>
-    <form action="/sign_up" method="post">
+    <form action="/register" method="post">
         <label for="username">Username:</label><br>
         <input type="text" id="username" name="username"><br>
         <label for="password">Password:</label><br>
